--- a/김현민/index.html
+++ b/김현민/index.html
@@ -1,101 +1,160 @@
 <!DOCTYPE html>
 <html lang="ko">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
+        <link rel="stylesheet" href="assets/css/reset.css" />
+        <link rel="stylesheet" href="assets/css/style.css" />
+    </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="assets/css/reset.css">
-    <link rel="stylesheet" href="assets/css/style.css">
-</head>
+    <body>
+        <header id="header">
+            <h1>port<span>Planet</span></h1>
+            <nav>
+                <ul>
+                    <li>work</li>
+                    <li>coding</li>
+                    <li>team</li>
+                    <li>contact</li>
+                </ul>
+            </nav>
+        </header>
+        <!-- //header -->
 
-<body>
-    <header id="header">
-        <h1>port<span>Planet</span></h1>
-        <nav>
-            <ul>
-                <li>work</li>
-                <li>coding</li>
-                <li>team</li>
-                <li>contact</li>
-            </ul>
-        </nav>
-    </header>
-    <!-- //header -->
-
-    <main data-scroll-container>
-        <section id="section1">
-            <div class="text">
-                <div class="t1 split">developer
+        <main data-scroll-container>
+            <section id="section1">
+                <div class="text">
+                    <div class="t1 split">developer</div>
+                    <div class="t2 split">the portfolio<span>pro</span></div>
+                    <div class="t3"><img src="assets/img/face.png" alt="sk" /></div>
+                    <div class="t4 split">hyunmin</div>
                 </div>
-                <div class="t2 split">the portfolio<span>pro</span></div>
-                <div class="t3"><img src="assets/img/face.png" alt="sk"></div>
-                <div class="t4 split">hyunmin
+                <div class="scroll">
+                    <i>This is a developer portfolio filled with passion and effort.</i>
+                    <span><em>scroll</em>down</span>
                 </div>
-            </div>
-            <div class="scroll">
-                <i>This is a developer portfolio filled
-                    with passion and effort.</i>
-                <span><em>scroll</em>down</span>
-            </div>
-            <canvas id="stars"></canvas>
-        </section>
-        <!-- //section1 -->
+                <canvas id="stars"></canvas>
+            </section>
+            <!-- //section1 -->
 
-        <section id="section2">
-            <div>
-                <span class="ab">{ Mission & Vision }</span>
-                <div class="aa split">
-                    unitin art and<br>
-                    technology to redefine<br>
-                    digital creativity
+            <section id="section2">
+                <div>
+                    <span class="ab">{ Mission & Vision }</span>
+                    <div class="aa split">
+                        unitin art and<br />
+                        technology to redefine<br />
+                        digital creativity
+                    </div>
+                    <div class="bb">
+                        <p class="split">
+                            안녕하세요.<br />
+                            저는 전기공사 분야에서 6년간의 경력을 쌓아온 김현민입니다.<br />
+                            전기공사 일을 통해 다양한 기술을 습득하고 문제 해결 능력을 키웠습니다.<br />
+                            수많은 프로젝트를 수행하며 현장에서의 <br />
+                            실전 경험을 쌓았고, 이를 통해 <br />
+                            전문적인 기술과 노하우를 축적할 수 있었습니다.
+                        </p>
+
+                        <p class="split">
+                            저는 새로운 도전을 찾아 프론트엔드 개발자의 길을 걷기로 결심했습니다.<br />
+                            기술의 발전과 함께 웹 개발에 대한 관심이 커지면서,<br />
+                            저의 미래를 위한 더 나은 기회를 모색하게 되었습니다.
+                        </p>
+                    </div>
                 </div>
-                <div class="bb">
-                    <p class="split">
-                        안녕하세요.<br>
-                        저는 전기공사 분야에서 6년간의 경력을 쌓아온 김현민입니다.<br>
-                        전기공사 일을 통해 다양한 기술을 습득하고 문제 해결 능력을 키웠습니다.<br>
-                        수많은 프로젝트를 수행하며 현장에서의 <br>
-                        실전 경험을 쌓았고, 이를 통해 <br> 전문적인 기술과 노하우를 축적할 수 있었습니다.
+            </section>
+            <!-- //section2 -->
+
+            <section id="section3">
+                <div class="title">
+                    <h3>javascript</h3>
+                    <p>
+                        자바스크립를 활용한 동적 웹 애플리케이션 개발 경험이 풍부합니다.<br />복잡한 문제를 해결하고
+                        최적화된 코드를 작성하여 사용자 친화적인 인터페이스를 구현하는 능력을 갖추고 있습니다.
                     </p>
-
-                    <p class="split">
-                        저는 새로운 도전을 찾아 프론트엔드 개발자의 길을 걷기로 결심했습니다.<br>
-                        기술의 발전과 함께 웹 개발에 대한 관심이 커지면서,<br>
-                        저의 미래를 위한 더 나은 기회를 모색하게 되었습니다.
+                </div>
+                <div class="title">
+                    <h3>react.js</h3>
+                    <p>
+                        자바스크립를 활용한 동적 웹 애플리케이션 개발 경험이 풍부합니다.<br />복잡한 문제를 해결하고
+                        최적화된 인터페이스를 구현하는 능력을 갖추고 있습니다.
                     </p>
                 </div>
-            </div>
-        </section>
-        <!-- //section2 -->
+                <div class="title">
+                    <h3>node.js</h3>
+                    <p>
+                        자바스크립를 활용한 동적 웹 애플리케이션 개발 경험이 풍부합니다.<br />복잡한 문제를 해결하고
+                        최적화된 코드를 작성하여 능력을 갖추고 있습니다.
+                    </p>
+                </div>
+                <div class="title">
+                    <h3>PHP</h3>
+                    <p>
+                        자바스크립를 활용한 동적 웹 애플리케이션 개발 경험이 풍부합니다.<br />복잡한 문제를 해결하고
+                        최적화된 코드를 작성하여 사용자 친화적인 인터페이스를 구현하는 능력을 갖추고 있습니다.
+                    </p>
+                </div>
+            </section>
+            <!-- //section3 -->
 
-        <section id="section3"></section>
-        <section id="section4"></section>
-        <section id="section5"></section>
-        <section id="section6"></section>
-    </main>
+            <section id="section4">
+                <div class="portTitle">
+                    <span class="ab">{ Mission & Vision }</span>
+                    <div class="aa split">
+                        unitin art technology to redefine<br />
+                        technology to redefine technology to redefine<br />
+                        digital creativity
+                    </div>
+                </div>
 
+                <div class="portWrap">
+                    <div class="port">
+                        <div class="left">
+                            <div>
+                                <div class="img"></div>
+                                <h4>python</h4>
+                            </div>
+                        </div>
+                        <div class="right">
+                            <h4>python</h4>
+                            <p>이 사이트는 파이썬으로 만들어진 사이트이면<br />무엇으로 만들어져있습니다.</p>
+                            <a href="#" class="site">SITE VIEW</a>
+                            <a href="#" class="code">CODE VIEW</a>
+                        </div>
+                    </div>
+                    <div class="port">
+                        <div class="left"></div>
+                        <div class="right"></div>
+                    </div>
+                </div>
+            </section>
+            <!-- //section4 -->
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@1/bundled/lenis.min.js"></script>
-    <script src="https://unpkg.com/split-type"></script>
+            <section id="section5"></section>
+            <section id="section6"></section>
+        </main>
 
-    <script>
-        const lenis = new Lenis();
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@1/bundled/lenis.min.js"></script>
+        <script src="https://unpkg.com/split-type"></script>
 
-        lenis.on('scroll', (e) => {
-            console.log(e);
-        });
+        <script>
+            const lenis = new Lenis();
 
-        function raf(time) {
-            lenis.raf(time);
+            lenis.on("scroll", (e) => {
+                console.log(e);
+            });
+
+            function raf(time) {
+                lenis.raf(time);
+                requestAnimationFrame(raf);
+            }
+
             requestAnimationFrame(raf);
-        }
-
-        requestAnimationFrame(raf);
-    </script>
-    <!-- <script type="module">
+        </script>
+        <!-- <script type="module">
         import locomotiveScroll from "https://cdn.skypack.dev/locomotive-scroll@4.0.6";
 
         const lscroll = new locomotiveScroll({
@@ -104,142 +163,136 @@
         });
     </script> -->
 
-    <script>
-        const targets = gsap.utils.toArray(".split");
-        let SplitClient = new SplitType(targets, { type: "lines, words, chars" });
-        let lines = SplitClient.lines;
-        let words = SplitClient.words;
-        let chars = SplitClient.chars;
+        <script>
+            const targets = gsap.utils.toArray(".split");
+            let SplitClient = new SplitType(targets, { type: "lines, words, chars" });
+            let lines = SplitClient.lines;
+            let words = SplitClient.words;
+            let chars = SplitClient.chars;
 
-        gsap.set(".text .t1 .char", { y: 200 })
-        gsap.set(".text .t2 .char", { y: 200 })
-        gsap.set(".text .t2 span", { y: 10, opactiy: 0 })
-        gsap.set(".text .t3 img", { opacity: 0, scale: 0, rotation: 100 })
-        gsap.set(".text .t4 .char", { y: 200 })
-        gsap.set(".scroll", { y: 50, opacity: 0 })
-        gsap.set("#header", { top: -250 })
+            gsap.set(".text .t1 .char", { y: 200 });
+            gsap.set(".text .t2 .char", { y: 200 });
+            gsap.set(".text .t2 span", { y: 10, opactiy: 0 });
+            gsap.set(".text .t3 img", { opacity: 0, scale: 0, rotation: 100 });
+            gsap.set(".text .t4 .char", { y: 200 });
+            gsap.set(".scroll", { y: 50, opacity: 0 });
+            gsap.set("#header", { top: -250 });
 
-        const tl = gsap.timeline();
+            const tl = gsap.timeline();
 
-        setTimeout(() => {
-            tl.to(".text .t1 .char", { y: 0, stagger: 0.03, ease: "power3.out" })
-            tl.to(".text .t2 .char", { y: 0, stagger: 0.03, ease: "power3.out" }, "-=0.5")
-            tl.to(".text .t2 span", { y: 0, opactiy: 1 }, "-=0.5")
-            tl.to(".text .t4 .char", { y: 0, stagger: 0.03, ease: "power3.out" }, "-=0.5")
-            tl.to(".text .t3 img", { opacity: 1, scale: 1, rotation: 0, ease: "power1.out" })
-            tl.to(".scroll", { opacity: 1, y: 0, ease: "power4.out" })
-            tl.to("#header", { top: 0, ease: "power4.out" })
-        }, 2000);
+            setTimeout(() => {
+                tl.to(".text .t1 .char", { y: 0, stagger: 0.03, ease: "power3.out" });
+                tl.to(".text .t2 .char", { y: 0, stagger: 0.03, ease: "power3.out" }, "-=0.5");
+                tl.to(".text .t2 span", { y: 0, opactiy: 1 }, "-=0.5");
+                tl.to(".text .t4 .char", { y: 0, stagger: 0.03, ease: "power3.out" }, "-=0.5");
+                tl.to(".text .t3 img", { opacity: 1, scale: 1, rotation: 0, ease: "power1.out" });
+                tl.to(".scroll", { opacity: 1, y: 0, ease: "power4.out" });
+                tl.to("#header", { top: 0, ease: "power4.out" });
+            }, 2000);
 
+            gsap.set("#section2 .ab", { opacity: 0 });
+            const ani1 = gsap.timeline();
+            ani1.to("#section2 .ab", { opacity: 1 });
 
-        gsap.set("#section2 .ab", { opacity: 0 })
-        const ani1 = gsap.timeline();
-        ani1.to("#section2 .ab", { opacity: 1 })
-
-        ScrollTrigger.create({
-            animation: ani1,
-            trigger: "#section2 .ab",
-            start: "top center",
-            end: "bottom top",
-            markers: false
-        });
-
-
-        gsap.set("#section2 .aa .char", { opacity: 0, y: 50 })
-        const ani2 = gsap.timeline();
-        ani2.to("#section2 .aa .char", { opacity: 1, y: 0, stagger: 0.01, ease: "power3.out" })
-
-        ScrollTrigger.create({
-            animation: ani2,
-            trigger: "#section2 .aa",
-            start: "top center",
-            end: "bottom top",
-            markers: false
-        });
-
-
-        gsap.set("#section2 .bb", { opacity: 0 })
-        const ani3 = gsap.timeline();
-        ani3.to("#section2 .bb", { opacity: 1 })
-
-        ScrollTrigger.create({
-            animation: ani3,
-            trigger: "#section2 .bb",
-            start: "top center",
-            end: "bottom top",
-            markers: false
-        });
-
-
-
-    </script>
-
-
-    <script>
-        const stars = document.getElementById('stars');
-        const starsCtx = stars.getContext('2d');
-
-        let screen, starsElements, starsParams = { speed: 0.61, number: 100, extinction: 10 };
-
-        setupStars();
-        updateStars();
-
-        window.onresize = function () {
-            setupStars();
-        };
-
-        function Star() {
-            this.x = Math.random() * stars.width;
-            this.y = Math.random() * stars.height;
-            this.z = Math.random() * stars.width;
-
-            this.move = function () {
-                this.z -= starsParams.speed;
-                if (this.z <= 0) {
-                    this.z = stars.width;
-                }
-            };
-
-            this.show = function () {
-                let x, y, rad, opacity;
-                x = (this.x - screen.c[0]) * (stars.width / this.z);
-                x = x + screen.c[0];
-                y = (this.y - screen.c[1]) * (stars.width / this.z);
-                y = y + screen.c[1];
-                rad = stars.width / this.z;
-                opacity = (rad > starsParams.extinction) ? 0.75 * (2 - rad / starsParams.extinction) : 0.5;
-
-                starsCtx.beginPath();
-                starsCtx.fillStyle = "rgba(255, 255, 255, " + opacity + ")";
-                starsCtx.arc(x, y, rad, 0, Math.PI * 2);
-                starsCtx.fill();
-            }
-        }
-
-        function setupStars() {
-            screen = {
-                w: window.innerWidth,
-                h: window.innerHeight,
-                c: [window.innerWidth * 0.5, window.innerHeight * 0.5]
-            };
-            window.cancelAnimationFrame(updateStars);
-            stars.width = screen.w;
-            stars.height = screen.h;
-            starsElements = [];
-            for (let i = 0; i < starsParams.number; i++) {
-                starsElements[i] = new Star();
-            }
-        }
-
-        function updateStars() {
-            starsCtx.clearRect(0, 0, stars.width, stars.height); // 배경을 투명하게 지우기
-            starsElements.forEach(function (s) {
-                s.show();
-                s.move();
+            ScrollTrigger.create({
+                animation: ani1,
+                trigger: "#section2 .ab",
+                start: "top center",
+                end: "bottom top",
+                markers: false,
             });
-            window.requestAnimationFrame(updateStars);
-        }
-    </script>
-</body>
 
+            gsap.set("#section2 .aa .char", { opacity: 0, y: 50 });
+            const ani2 = gsap.timeline();
+            ani2.to("#section2 .aa .char", { opacity: 1, y: 0, stagger: 0.01, ease: "power3.out" });
+
+            ScrollTrigger.create({
+                animation: ani2,
+                trigger: "#section2 .aa",
+                start: "top center",
+                end: "bottom top",
+                markers: false,
+            });
+
+            gsap.set("#section2 .bb", { opacity: 0 });
+            const ani3 = gsap.timeline();
+            ani3.to("#section2 .bb", { opacity: 1 });
+
+            ScrollTrigger.create({
+                animation: ani3,
+                trigger: "#section2 .bb",
+                start: "top center",
+                end: "bottom top",
+                markers: false,
+            });
+        </script>
+
+        <script>
+            const stars = document.getElementById("stars");
+            const starsCtx = stars.getContext("2d");
+
+            let screen,
+                starsElements,
+                starsParams = { speed: 0.61, number: 100, extinction: 10 };
+
+            setupStars();
+            updateStars();
+
+            window.onresize = function () {
+                setupStars();
+            };
+
+            function Star() {
+                this.x = Math.random() * stars.width;
+                this.y = Math.random() * stars.height;
+                this.z = Math.random() * stars.width;
+
+                this.move = function () {
+                    this.z -= starsParams.speed;
+                    if (this.z <= 0) {
+                        this.z = stars.width;
+                    }
+                };
+
+                this.show = function () {
+                    let x, y, rad, opacity;
+                    x = (this.x - screen.c[0]) * (stars.width / this.z);
+                    x = x + screen.c[0];
+                    y = (this.y - screen.c[1]) * (stars.width / this.z);
+                    y = y + screen.c[1];
+                    rad = stars.width / this.z;
+                    opacity = rad > starsParams.extinction ? 0.75 * (2 - rad / starsParams.extinction) : 0.5;
+
+                    starsCtx.beginPath();
+                    starsCtx.fillStyle = "rgba(255, 255, 255, " + opacity + ")";
+                    starsCtx.arc(x, y, rad, 0, Math.PI * 2);
+                    starsCtx.fill();
+                };
+            }
+
+            function setupStars() {
+                screen = {
+                    w: window.innerWidth,
+                    h: window.innerHeight,
+                    c: [window.innerWidth * 0.5, window.innerHeight * 0.5],
+                };
+                window.cancelAnimationFrame(updateStars);
+                stars.width = screen.w;
+                stars.height = screen.h;
+                starsElements = [];
+                for (let i = 0; i < starsParams.number; i++) {
+                    starsElements[i] = new Star();
+                }
+            }
+
+            function updateStars() {
+                starsCtx.clearRect(0, 0, stars.width, stars.height); // 배경을 투명하게 지우기
+                starsElements.forEach(function (s) {
+                    s.show();
+                    s.move();
+                });
+                window.requestAnimationFrame(updateStars);
+            }
+        </script>
+    </body>
 </html>
