--- a/박진아/index.html
+++ b/박진아/index.html
@@ -1,177 +1,243 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+        <link rel="stylesheet" href="assets/css/reset.css" />
+        <link rel="stylesheet" href="assets/css/style.css" />
+    </head>
 
-    <link rel="stylesheet" href="assets/css/reset.css">
-    <link rel="stylesheet" href="assets/css/style.css">
-</head>
+    <body>
+        <header id="header">
+            <h1 class="logo">
+                <span>port</span>
+                <span>folio</span>
+            </h1>
+            <nav class="menu">
+                <ul>
+                    <li>about</li>
+                    <li>work</li>
+                    <li>script</li>
+                    <li>contact</li>
+                </ul>
+            </nav>
+        </header>
+        <!-- //header -->
 
-<body>
-    <header id="header">
-        <h1 class="logo">
-            <span>port</span>
-            <span>folio</span>
-        </h1>
-        <nav class="menu">
-            <ul>
-                <li>about</li>
-                <li>work</li>
-                <li>script</li>
-                <li>contact</li>
-            </ul>
-        </nav>
-    </header>
-    <!-- //header -->
+        <section id="section1">
+            <p class="desc split">
+                어떤 일이라도 노력하고 즐기면 그 결과는 빛을 바란다고 생각합니다.<br />
+                신입의 열정과 도전정신을 깊숙히 새기며 배움에 있어 <br />
+                겸손함을 유지하며 세부적인 곳까지 파고드는<br />
+                개발자가 되겠습니다.
+            </p>
+            <div class="bg"></div>
+        </section>
+        <!-- //section1 -->
 
-    <section id="section1">
-        <p class="desc split">
-            어떤 일이라도 노력하고 즐기면 그 결과는 빛을 바란다고 생각합니다.<br>
-            신입의 열정과 도전정신을 깊숙히 새기며 배움에 있어 <br>
-            겸손함을 유지하며 세부적인 곳까지 파고드는<br>
-            개발자가 되겠습니다.
-        </p>
-        <div class="bg"></div>
-    </section>
-    <!-- //section1 -->
-
-    <section id="section2">
-        <div class="text-wrap">
-            <div>
-                <span class="tx1">Providing</span> <span class="sp1"></span> solutions that
-                balance creativity <span class="sp2"></span>
-                and practicality <span class="sp3"></span> creativity
+        <section id="section2">
+            <div class="text-wrap">
+                <div>
+                    <span class="tx1">Providing</span> <span class="sp1"></span> solutions that balance creativity
+                    <span class="sp2"></span> and practicality <span class="sp3"></span> creativity
+                </div>
             </div>
-        </div>
 
-        <h3 class="love split">I LOVE DESIGNING & CODING</h3>
+            <h3 class="love split">I LOVE DESIGNING & CODING</h3>
 
-        <p class="right split">
-            There is no design without logos and brands. In a world increasingly involved with social network, we
-            often forget how powerful a logo can be. I love designing visual identities and am always looking for
-            new branding projects.
-        </p>
+            <p class="right split">
+                There is no design without logos and brands. In a world increasingly involved with social network, we
+                often forget how powerful a logo can be. I love designing visual identities and am always looking for
+                new branding projects.
+            </p>
 
-        <div class="img">
-            <div class="face">
-                <img src="assets/img/jin.jpg" alt="dd">
+            <div class="img">
+                <div class="face">
+                    <img src="assets/img/jin.jpg" alt="dd" />
+                </div>
+                <div class="ment">
+                    어떤 일이라도 노력하고 즐기면 그 결과는 빛을 바란다고 생각합니다.<br />
+                    신입의 열정과 도전정신을 깊숙히 새기며 배움에 있어 겸손함을 유지하며<br />
+                    세부적인 곳까지 파고드는 개발자가 되겠습니다.
+                </div>
             </div>
-            <div class="ment">
-                어떤 일이라도 노력하고 즐기면 그 결과는 빛을 바란다고 생각합니다.<br>
-                신입의 열정과 도전정신을 깊숙히 새기며 배움에 있어 겸손함을 유지하며<br>
-                세부적인 곳까지 파고드는 개발자가 되겠습니다.
+        </section>
+        <section id="section3"></section>
+        <section id="section4"></section>
+        <section id="section5">
+            <div class="title">
+                <h3>comment</h3>
+                <input type="text" placeholder="여기에 댓글을 써주세요!" />
             </div>
-        </div>
-    </section>
-    <section id="section3"></section>
-    <section id="section4"></section>
-    <section id="section5"></section>
-    <section id="section6"></section>
+            <div class="commentBox">
+                <div class="masonry">
+                    <div class="item">
+                        <div class="item__content"></div>
+                    </div>
+                    <div class="item">
+                        <div class="item__content item__content--small"></div>
+                    </div>
+                    <div class="item">
+                        <div class="item__content item__content--medium"></div>
+                    </div>
+                    <div class="item">
+                        <div class="item__content item__content--small"></div>
+                    </div>
+                    <div class="item">
+                        <div class="item__content item__content--medium"></div>
+                    </div>
+                    <div class="item">
+                        <div class="item__content"></div>
+                    </div>
+                    <div class="item">
+                        <div class="item__content item__content--large"></div>
+                    </div>
+                    <div class="item">
+                        <div class="item__content item__content--medium"></div>
+                    </div>
+                    <div class="item">
+                        <div class="item__content item__content--small"></div>
+                    </div>
+                    <div class="item">
+                        <div class="item__content"></div>
+                    </div>
+                    <div class="item">
+                        <div class="item__content item__content--large"></div>
+                    </div>
+                    <div class="item">
+                        <div class="item__content"></div>
+                    </div>
+                    <div class="item">
+                        <div class="item__content item__content--small"></div>
+                    </div>
+                    <div class="item">
+                        <div class="item__content item__content--large"></div>
+                    </div>
+                    <div class="item">
+                        <div class="item__content item__content--medium"></div>
+                    </div>
+                    <div class="item">
+                        <div class="item__content item__content--small"></div>
+                    </div>
+                    <div class="item">
+                        <div class="item__content item__content--medium"></div>
+                    </div>
+                    <div class="item">
+                        <div class="item__content"></div>
+                    </div>
+                    <div class="item">
+                        <div class="item__content item__content--small"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- //section5 -->
+        <section id="section6"></section>
+        <!-- //section5 -->
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@1/bundled/lenis.min.js"></script>
-    <script src="https://unpkg.com/split-type"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@1/bundled/lenis.min.js"></script>
+        <script src="https://unpkg.com/split-type"></script>
 
-    <script>
-        gsap.registerPlugin(ScrollTrigger);
-        const lenis = new Lenis({
-            duration: 1.2,
-            easing: (t) => Math.min(1, 1.001 - Math.pow(2, -10 * t)),
-        })
-        function raf(time) {
-            lenis.raf(time)
-            requestAnimationFrame(raf)
-        }
-        requestAnimationFrame(raf);
+        <script>
+            gsap.registerPlugin(ScrollTrigger);
+            const lenis = new Lenis({
+                duration: 1.2,
+                easing: (t) => Math.min(1, 1.001 - Math.pow(2, -10 * t)),
+            });
+            function raf(time) {
+                lenis.raf(time);
+                requestAnimationFrame(raf);
+            }
+            requestAnimationFrame(raf);
 
-        const targets = gsap.utils.toArray(".split");
-        let SplitClient = new SplitType(targets, { type: "lines, words, chars" });
-        let lines = SplitClient.lines;
-        let words = SplitClient.words;
-        let chars = SplitClient.chars;
-    </script>
+            const targets = gsap.utils.toArray(".split");
+            let SplitClient = new SplitType(targets, { type: "lines, words, chars" });
+            let lines = SplitClient.lines;
+            let words = SplitClient.words;
+            let chars = SplitClient.chars;
+        </script>
 
-    <script>
-        gsap.set("#section1 .desc .char", { opacity: 0 })
-        gsap.set("#header .logo", { opacity: 0 })
-        gsap.set("#header h1", { lineHeight: 2 })
-        gsap.set("#header .menu ul li", { opacity: 0 })
+        <script>
+            gsap.set("#section1 .desc .char", { opacity: 0 });
+            gsap.set("#header .logo", { opacity: 0 });
+            gsap.set("#header h1", { lineHeight: 2 });
+            gsap.set("#header .menu ul li", { opacity: 0 });
 
-        const tl = gsap.timeline();
+            const tl = gsap.timeline();
 
-        setTimeout(() => {
-            tl.to("#section1 .desc .char", { opacity: 1, stagger: 0.05, ease: "power2.inOut" })
-            tl.to("#header .logo", { opacity: 1, duration: 2 })
-            tl.to("#section1 .desc .char", { opacity: 0, stagger: 0.05, ease: "power2.inOut" })
-            tl.to("#header h1", { lineHeight: 0.9, duration: 1, ease: "power2.inOut" }, "-=1")
-            tl.to("#header h1", { scale: 0.2, duration: 1, ease: "power2.inOut" })
-            tl.to("#header h1", { rotation: 180, ease: "power2.inOut" })
-            tl.to("#header h1", { lineHeight: 2, duration: 1, ease: "power2.inOut" })
-            tl.to("#header .menu ul li", { opacity: 1, stagger: 0.01, ease: "power2.inOut" })
-            tl.to("#header h1", { top: 50, duration: 0.6, lineHeight: 0.9, ease: "power2.inOut", delay: 2 }, "cc")
-            tl.to("#header .menu", { top: 50, duration: 0.6, ease: "power2.inOut", delay: 2 }, "cc")
-            tl.to("#header .menu ul li:nth-child(2)", { marginRight: 30, duration: 0.6, ease: "power2.inOut", delay: 2 }, "cc")
-            tl.to("#header .menu ul li:nth-child(3)", { marginLeft: 140, duration: 0.6, ease: "power2.inOut", delay: 2 }, "cc")
-            tl.to("#header h1", { position: "fixed" })
-            tl.to("#header .menu", { position: "fixed" })
-        }, 2000);
+            setTimeout(() => {
+                tl.to("#section1 .desc .char", { opacity: 1, stagger: 0.05, ease: "power2.inOut" });
+                tl.to("#header .logo", { opacity: 1, duration: 2 });
+                tl.to("#section1 .desc .char", { opacity: 0, stagger: 0.05, ease: "power2.inOut" });
+                tl.to("#header h1", { lineHeight: 0.9, duration: 1, ease: "power2.inOut" }, "-=1");
+                tl.to("#header h1", { scale: 0.2, duration: 1, ease: "power2.inOut" });
+                tl.to("#header h1", { rotation: 180, ease: "power2.inOut" });
+                tl.to("#header h1", { lineHeight: 2, duration: 1, ease: "power2.inOut" });
+                tl.to("#header .menu ul li", { opacity: 1, stagger: 0.01, ease: "power2.inOut" });
+                tl.to("#header h1", { top: 50, duration: 0.6, lineHeight: 0.9, ease: "power2.inOut", delay: 2 }, "cc");
+                tl.to("#header .menu", { top: 50, duration: 0.6, ease: "power2.inOut", delay: 2 }, "cc");
+                tl.to(
+                    "#header .menu ul li:nth-child(2)",
+                    { marginRight: 30, duration: 0.6, ease: "power2.inOut", delay: 2 },
+                    "cc"
+                );
+                tl.to(
+                    "#header .menu ul li:nth-child(3)",
+                    { marginLeft: 140, duration: 0.6, ease: "power2.inOut", delay: 2 },
+                    "cc"
+                );
+                tl.to("#header h1", { position: "fixed" });
+                tl.to("#header .menu", { position: "fixed" });
+            }, 2000);
 
+            //sec2
+            gsap.set("#section2 .love .char", { opacity: 0, y: 20 });
 
+            const ani1 = gsap.timeline();
+            ani1.to("#section2 .love .char", { stagger: 0.01, duration: 0.8, y: 0, opacity: 1, ease: "power3.out" });
 
-        //sec2
-        gsap.set("#section2 .love .char", { opacity: 0, y: 20 })
-
-        const ani1 = gsap.timeline();
-        ani1.to("#section2 .love .char", { stagger: 0.01, duration: 0.8, y: 0, opacity: 1, ease: "power3.out" })
-
-        ScrollTrigger.create({
-            animation: ani1,
-            trigger: "#section2 .love .char",
-            start: "top center",
-            end: "bottom top",
-            markers: false
-        });
-
-
-        gsap.set("#section2 .right .char", { opacity: 0, y: 10, rotationz: 10 })
-
-        const ani2 = gsap.timeline();
-        ani1.to("#section2 .right .char", { stagger: 0.01, duration: 0.8, rotationz: 0, y: 0, opacity: 1, ease: "power3.out" })
-
-        ScrollTrigger.create({
-            animation: ani2,
-            trigger: "#section2 .right .char",
-            start: "top center",
-            end: "bottom top",
-            markers: false
-        });
-
-        gsap.to("#section2 .img .face img", {
-            scrollTrigger: {
-                trigger: "#section2 .img .face",
-                start: "top bottom",
+            ScrollTrigger.create({
+                animation: ani1,
+                trigger: "#section2 .love .char",
+                start: "top center",
                 end: "bottom top",
-                scrub: true,
-            },
-            y: -100,
-            ease: "power1.inOut"
-        });
+                markers: false,
+            });
 
+            gsap.set("#section2 .right .char", { opacity: 0, y: 10, rotationz: 10 });
 
-    </script>
+            const ani2 = gsap.timeline();
+            ani1.to("#section2 .right .char", {
+                stagger: 0.01,
+                duration: 0.8,
+                rotationz: 0,
+                y: 0,
+                opacity: 1,
+                ease: "power3.out",
+            });
 
+            ScrollTrigger.create({
+                animation: ani2,
+                trigger: "#section2 .right .char",
+                start: "top center",
+                end: "bottom top",
+                markers: false,
+            });
 
-
-
-
-
-
-
-
-</body>
-
+            gsap.to("#section2 .img .face img", {
+                scrollTrigger: {
+                    trigger: "#section2 .img .face",
+                    start: "top bottom",
+                    end: "bottom top",
+                    scrub: true,
+                },
+                y: -100,
+                ease: "power1.inOut",
+            });
+        </script>
+    </body>
 </html>
