--- a/박정민/index.html
+++ b/박정민/index.html
@@ -265,31 +265,33 @@
                             <div>
                                 <p>
                                     <span> 1. 문제 해결 능력 향상 </span>
-                                    코딩은 문제 해결을 위한 논리적 사고를 요구합니다. 프로그래밍을 통해 복잡한 문제를 작은 단위로 나누고,
-                                    각각의 문제를 해결하는 과정을 반복하게 됩니다. 이 과정에서 논리적 사고와 문제 해결 능력이 크게
-                                    향상됩니다. 이는 단지 컴퓨터 과학 분야에만 국한되지 않고, 다양한 분야에서 응용될 수 있는 귀중한
-                                    기술입니다.
+                                    코딩은 문제 해결을 위한 논리적 사고를 요구합니다. 프로그래밍을 통해 복잡한 문제를
+                                    작은 단위로 나누고, 각각의 문제를 해결하는 과정을 반복하게 됩니다. 이 과정에서
+                                    논리적 사고와 문제 해결 능력이 크게 향상됩니다. 이는 단지 컴퓨터 과학 분야에만
+                                    국한되지 않고, 다양한 분야에서 응용될 수 있는 귀중한 기술입니다.
                                 </p>
 
                                 <p>
                                     <span>2. 창의력 발휘</span>
-                                    코딩은 창의적인 작업입니다. 프로그래머는 무에서 유를 창조하는 사람들로, 아이디어를 구체화하고 현실로
-                                    만드는 과정을 거칩니다. 앱 개발, 웹사이트 구축, 게임 디자인 등 다양한 프로젝트를 통해 자신의 창의력을
-                                    발휘할 수 있습니다. 또한, 새로운 도구와 기술을 학습하고 응용하면서 끊임없이 자신을 발전시킬 수 있습니다.
+                                    코딩은 창의적인 작업입니다. 프로그래머는 무에서 유를 창조하는 사람들로, 아이디어를
+                                    구체화하고 현실로 만드는 과정을 거칩니다. 앱 개발, 웹사이트 구축, 게임 디자인 등
+                                    다양한 프로젝트를 통해 자신의 창의력을 발휘할 수 있습니다. 또한, 새로운 도구와
+                                    기술을 학습하고 응용하면서 끊임없이 자신을 발전시킬 수 있습니다.
                                 </p>
                             </div>
                             <div>
                                 <p>
-                                    <span>3. 경제적 기회</span> 코딩 기술은 현대 경제에서 매우 중요한 자산입니다. 디지털 경제가 성장하면서
-                                    코딩 능력을 가진 사람들의 수요가 급증하고 있습니다. 소프트웨어 개발자, 데이터 과학자, 시스템 관리자 등
-                                    다양한 직업군에서 높은 연봉과 좋은 근무 조건을 제공받을 수 있습니다. 또한, 프리랜서로서 독립적으로
-                                    일하거나 스타트업을 창업하여 새로운 기회를 창출할 수도 있습니다.
+                                    <span>3. 경제적 기회</span> 코딩 기술은 현대 경제에서 매우 중요한 자산입니다. 디지털
+                                    경제가 성장하면서 코딩 능력을 가진 사람들의 수요가 급증하고 있습니다. 소프트웨어
+                                    개발자, 데이터 과학자, 시스템 관리자 등 다양한 직업군에서 높은 연봉과 좋은 근무
+                                    조건을 제공받을 수 있습니다. 또한, 프리랜서로서 독립적으로 일하거나 스타트업을
+                                    창업하여 새로운 기회를 창출할 수도 있습니다.
                                 </p>
                                 <p>
-                                    <span>4. 자동화 및 효율성 증대</span> 코딩을 통해 반복적인 작업을 자동화할 수 있습니다. 이는 개인의 일상
-                                    생활뿐만 아니라 기업의 운영에도 큰 영향을 미칩니다. 예를 들어, 데이터를 자동으로 처리하고 분석하는
-                                    스크립트를 작성하면 시간을 절약하고 효율성을 크게 높일 수 있습니다. 이는 비용 절감과 생산성 향상으로
-                                    이어질 수 있습니다.
+                                    <span>4. 자동화 및 효율성 증대</span> 코딩을 통해 반복적인 작업을 자동화할 수
+                                    있습니다. 이는 개인의 일상 생활뿐만 아니라 기업의 운영에도 큰 영향을 미칩니다. 예를
+                                    들어, 데이터를 자동으로 처리하고 분석하는 스크립트를 작성하면 시간을 절약하고
+                                    효율성을 크게 높일 수 있습니다. 이는 비용 절감과 생산성 향상으로 이어질 수 있습니다.
                                 </p>
                             </div>
                         </div>
@@ -308,10 +310,40 @@
         </section>
         <!-- //section2 -->
 
-        <section id="section3"></section>
+        <section id="section3">
+            <h3>portfolio</h3>
+
+            <div class="botLeft">6-month<br />PROJECT</div>
+            <div class="topRight">
+                <p>
+                    지난 6개월 동안 웹 개발을 집중적으로 공부하며 다양한 프로젝트를 진행했습니다. 이 기간 동안, 저는
+                    최신 웹 기술과 개발 도구를 활용하여 실질적인 <strong>애플리케이션을 구축</strong>하고, 실습을 통해
+                    이론적인 지식을 실제로 적용해 볼 수 있었습니다. 각 프로젝트는 제가 배운 내용을 실제로 적용해 본
+                    결과물이며, 저의 기술적 성장을 보여줍니다.
+                </p>
+                <p>
+                    프로젝트를 통해 저는 <strong>HTML</strong>, <strong>CSS</strong>, <strong>JavaScript</strong>와 같은
+                    기본적인 웹 기술부터 React, Angular, Vue.js 등의 프레임워크를 활용한 프론트엔드 개발, 그리고
+                    <strong>Node.js</strong>, Express, MongoDB를 사용한 백엔드 개발까지 다양한 기술 스택을 익힐 수
+                    있었습니다.
+                </p>
+            </div>
+        </section>
         <!-- //section3 -->
 
-        <section id="section4"></section>
+        <section id="section4">
+            <div class="textTitle">REACT.JS BLOG<span class="space">!</span>MERN BLOG</div>
+            <div class="textDesc">
+                <div class="left">Node.js + MongoDB</div>
+                <div class="right">
+                    지난 6개월 동안 웹 개발을 집중적으로 공부하며 다양한 프로젝트를 진행했습니다. 이 기간 동안, 저는
+                    최신 웹 기술과 개발 도구를 활용하여 실질적인 <strong>애플리케이션을 구축</strong>하고, 실습을 통해
+                    이론적인 지식을 실제로 적용해 볼 수 있었습니다.<br />
+                    <a href="#">사이트 보기</a>
+                    <a href="#">코드 보기</a>
+                </div>
+            </div>
+        </section>
         <section id="section5"></section>
         <section id="section6"></section>
 
@@ -379,7 +411,7 @@
                 ScrollTrigger.create({
                     trigger: panel,
                     start: "top top",
-                    end: "+=10000",
+                    end: "+=1000",
                     pin: true,
                     scrub: 0.5,
                     pinSpacing: false,
@@ -436,10 +468,16 @@
                 }
             );
 
-            let leftWall = Bodies.rectangle(0 - THICCNESS / 2, matterContainer.clientHeight / 2, THICCNESS, matterContainer.clientHeight, {
-                isStatic: true,
-                render: { strokeStyle: "transparent" },
-            });
+            let leftWall = Bodies.rectangle(
+                0 - THICCNESS / 2,
+                matterContainer.clientHeight / 2,
+                THICCNESS,
+                matterContainer.clientHeight,
+                {
+                    isStatic: true,
+                    render: { strokeStyle: "transparent" },
+                }
+            );
 
             let rightWall = Bodies.rectangle(
                 matterContainer.clientWidth + THICCNESS / 2,
@@ -490,7 +528,8 @@
 
                     setTimeout(() => {
                         let vertices = Svg.pathToVertices(path);
-                        let scaleFactor = (matterContainer.clientWidth * SVG_WIDTH_AS_PERCENT_OF_CONTAINER_WIDTH) / SVG_WIDTH_IN_PX;
+                        let scaleFactor =
+                            (matterContainer.clientWidth * SVG_WIDTH_AS_PERCENT_OF_CONTAINER_WIDTH) / SVG_WIDTH_IN_PX;
                         vertices = Vertices.scale(vertices, scaleFactor, scaleFactor);
                         let svgBody = Bodies.fromVertices(
                             matterContainer.clientWidth * Math.random(), // 무작위 x 위치
@@ -534,7 +573,8 @@
                     if (body.isStatic === true) return;
                     const { min, max } = body.bounds;
                     const bodyWidth = max.x - min.x;
-                    let scaleFactor = (matterContainer.clientWidth * SVG_WIDTH_AS_PERCENT_OF_CONTAINER_WIDTH) / bodyWidth;
+                    let scaleFactor =
+                        (matterContainer.clientWidth * SVG_WIDTH_AS_PERCENT_OF_CONTAINER_WIDTH) / bodyWidth;
 
                     Body.scale(body, scaleFactor, scaleFactor);
                 });
@@ -544,9 +584,15 @@
                 render.canvas.width = matterContainer.clientWidth;
                 render.canvas.height = matterContainer.clientHeight;
 
-                Body.setPosition(ground, Vector.create(matterContainer.clientWidth / 2, matterContainer.clientHeight + THICCNESS / 2));
+                Body.setPosition(
+                    ground,
+                    Vector.create(matterContainer.clientWidth / 2, matterContainer.clientHeight + THICCNESS / 2)
+                );
 
-                Body.setPosition(rightWall, Vector.create(matterContainer.clientWidth + THICCNESS / 2, matterContainer.clientHeight / 2));
+                Body.setPosition(
+                    rightWall,
+                    Vector.create(matterContainer.clientWidth + THICCNESS / 2, matterContainer.clientHeight / 2)
+                );
 
                 scaleBodies();
             }
