--- a/김진우/index.html
+++ b/김진우/index.html
@@ -17,6 +17,9 @@
         <!-- //header -->
 
         <div id="mainIntro">
+            <video class="videoBG" autoplay muted playsinline loop>
+                <source src="assets/videos/loseless-win11-hero-repeat.webm" type="video/webm" />
+            </video>
             <div class="about">
                 <p>
                     삶이란 누군가에게는 행복이며 누군가에게는 불행이고<br />
@@ -57,7 +60,7 @@
             <div class="footer__info">
                 <div class="menu">
                     <ul>
-                        <li class="first"><a href="#">dd</a></li>
+                        <li class="first"><a href="#"></a></li>
                         <li><a href="#"></a></li>
                         <li><a href="#"></a></li>
                         <li><a href="#"></a></li>
@@ -66,7 +69,7 @@
             </div>
         </div>
 
-        <div class="layer layer1 aboutLayer op0">
+        <div class="layer layer1 aboutLayer">
             <div class="layer__contents">
                 <div class="head">
                     <div class="face"></div>
@@ -262,7 +265,7 @@
             </div>
         </div>
 
-        <div class="layer layer3 react none">
+        <div class="layer layer3 react">
             <div class="layer__contents">
                 <h3>리액트 블로그</h3>
                 <span class="small">최신 코딩 관련 영상을 볼 수 있습니다.</span>
@@ -307,6 +310,43 @@
                 <div>
                     <span>view</span>
                     <span>code</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="portlayer">
+            <div class="port">
+                <div class="c1">
+                    <span class="dot"></span>
+                    <nav>
+                        <ul>
+                            <li><input type="checkbox" />포트폴리오</li>
+                            <li><input type="checkbox" />작업물</li>
+                            <li><input type="checkbox" />블로그</li>
+                            <li><input type="checkbox" />연락처</li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="c2">
+                    <div class="title">🤗 프로젝트</div>
+                    <div class="cont">
+                        <div class="left">
+                            <ul>
+                                <li>유튜브 뮤직 사이트</li>
+                                <li>영화 사이트</li>
+                                <li>체스 사이트</li>
+                            </ul>
+                        </div>
+                        <div class="right">
+                            <div class="img"></div>
+                            <p class="desc">
+                                유튜브 API를 이용하여 원하는 음악을 고르는 사이트입니다. 더 자세히 보고 싶다면 아래
+                                버튼을 클릭해주세요!
+                            </p>
+                            <a href="#">자세히 보기</a>
+                            <a href="#">실제 사이트 보기</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
