--- a/김이현/index2.html
+++ b/김이현/index2.html
@@ -45,8 +45,77 @@
         </section>
         <!-- //section1 -->
 
-        <section id="section2"></section>
-        <section id="section3"></section>
+        <section id="section2">
+            <div class="title">
+                <span>ALL DERAME[LEE HYEN]</span>
+                <span class="a">index / Experiment / About</span>
+                <span>[about]</span>
+                <span>LEE Agency ©2023</span>
+            </div>
+            <div class="cont">
+                <div class="left">
+                    <img src="https://kimyih.github.io/portfolio/assets/img/%EA%B9%80%EC%9D%B4%ED%98%84.jpg" alt="dd" />
+                </div>
+                <div class="right">
+                    <div>FRONTEND DEVELOPER KIM YIHYUN</div>
+                    <div>
+                        .YOUTHFULNESS .COMMUNICATIVE <span>.HARDWORKING</span> .TRUSTWORTHY .RESOURCEFUL .GENUINE
+                        .TRUSTWORTHY
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- //section2 -->
+
+        <section id="section3">
+            <div class="title">
+                <span>ALL DERAME[LEE HYEN]</span>
+                <span class="a">index / Experiment / About</span>
+                <span>[work]</span>
+                <span>LEE Agency ©2023</span>
+            </div>
+            <div class="cont">
+                <div class="left">
+                    <h3>List & Skill</h3>
+                </div>
+                <div class="right">
+                    <ul>
+                        <li>
+                            team project
+                            <ul>
+                                <li>youtube museic</li>
+                                <li>youtube movie</li>
+                            </ul>
+                        </li>
+                        <li>
+                            class project
+                            <ul>
+                                <li>youtube museic</li>
+                                <li>movie</li>
+                            </ul>
+                        </li>
+                        <li>
+                            css
+                            <ul>
+                                <li>meller</li>
+                                <li>youtube</li>
+                                <li>postman</li>
+                                <li>html</li>
+                            </ul>
+                        </li>
+                        <li>
+                            info
+                            <ul>
+                                <li>github</li>
+                                <li>blog</li>
+                                <li>email</li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+        <!-- //section3 -->
         <section id="section4"></section>
         <section id="section5"></section>
     </body>
