--- a/최선화/index.html
+++ b/최선화/index.html
@@ -47,7 +47,12 @@
                 <defs>
                     <filter id="goo">
                         <feGaussianBlur in="SourceGraphic" result="blur" stdDeviation="12" />
-                        <feColorMatrix in="blur" result="colormatrix" type="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 21 -9" />
+                        <feColorMatrix
+                            in="blur"
+                            result="colormatrix"
+                            type="matrix"
+                            values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 21 -9"
+                        />
                         <feBlend in="SourceGraphic" in2="colormatrix" />
                     </filter>
                 </defs>
@@ -56,17 +61,26 @@
         <!-- //section1 -->
 
         <section id="section2">
-            <div class="circle1"></div>
-            <div class="circle2"></div>
-            <div class="circle3"></div>
-            <div class="circle4"></div>
-            <div class="circle5">
-                <div class="bg"></div>
-            </div>
+            <div class="circle c1"></div>
+            <div class="circle c2"></div>
+            <div class="circle c3"></div>
+            <div class="circle c4"></div>
+            <div class="circle c5"></div>
+            <p class="desc">
+                안녕하세요!<br />어떤 일이라도 노력하고 즐기면 그 결과는 빛을 바란다고 생각합니다. <br />신입의 열정과
+                도전정신을 깊숙히 새기며 배움에 있어 겸손함을 유지하며 <br />세부적인 곳까지 파고드는 개발자가
+                되겠습니다.
+            </p>
         </section>
         <!-- //section2 -->
 
-        <section id="section3"></section>
+        <section id="section3">
+            <div class="container">
+                <div class="ct1">coding</div>
+                <div class="ct2">blog</div>
+                <div class="ct3">team</div>
+            </div>
+        </section>
         <!-- //section3 -->
 
         <section id="section4"></section>
@@ -114,28 +128,26 @@
                 tl.to("#particles", { opacity: 1, duration: 1 });
             }, 3000);
 
-            gsap.set(".circle1", { scale: 0 });
-            gsap.set(".circle2", { scale: 0 });
-            gsap.set(".circle3", { scale: 0 });
-            gsap.set(".circle4", { scale: 0 });
-            gsap.set(".circle5", { scale: 0 });
+            gsap.set("#section2 .c5", { opacity: 0 });
+            gsap.set("#section2 .desc", { opacity: 0 });
 
-            const ani1 = gsap.timeline();
-            ani1.to(".circle1", { left: "0%", top: "0%", scale: 1 });
-            ani1.to(".circle2", { left: "100%", top: "0%", scale: 1 });
-            ani1.to(".circle3", { left: "0%", top: "90%", scale: 1 });
-            ani1.to(".circle4", { left: "100%", top: "90%", scale: 1 });
-            ani1.to(".circle5", { scale: 2 });
-            ani1.to(".text .t1 .char", { opacity: 0, x: -100 });
-            ani1.to(".text .t2 .char", { opacity: 0, x: -10, stagger: 0.06, scale: 0, ease: "circ.out" });
-            ani1.to(".text .t3 .char", { opacity: 0, y: 20 });
+            const ani2 = gsap.timeline();
+
+            ani2.to("#section2 .c1", { x: 0, y: 0 }, "a");
+            ani2.to("#section2 .c2", { x: 0, y: 0 }, "a");
+            ani2.to("#section2 .c3", { x: 0, y: 0 }, "a");
+            ani2.to("#section2 .c4", { x: 0, y: 0 }, "a");
+            ani2.to("#section2 .c5", { opacity: 1 });
+            ani2.to("#section2 .desc", { opacity: 1 });
 
             ScrollTrigger.create({
-                animation: ani1,
+                animation: ani2,
                 trigger: "#section2",
                 start: "top top",
                 end: "+=2000",
+                scrub: true,
                 pin: true,
+                anticipatePin: 1,
                 markers: true,
             });
         </script>
@@ -190,7 +202,8 @@
                 render() {
                     this.item = $(this.svg, {
                         css: {
-                            transform: "translateX(" + this.coordinates.x + "px) translateY(" + this.coordinates.y + "px)",
+                            transform:
+                                "translateX(" + this.coordinates.x + "px) translateY(" + this.coordinates.y + "px)",
                         },
                     });
                     $("#particles").append(this.item);
