--- a/박소현2/about.html
+++ b/박소현2/about.html
@@ -11,11 +11,11 @@
     <body>
         <div id="section2">
             <div class="titleWrap">
-                <h2>I am Park So-hyun,<br />who plans, designs, and develops.</h2>
-                <p>
+                <h2 class="split">I am Park So-hyun,<br />who plans, designs, and develops.</h2>
+                <p class="split">
                     안녕하세요. 디자인 대학을 졸업하고 3년 동안 그래픽 및 웹 디자이너로 일한 경험이 있습니다. <br />
-                    디자이너로서 다양한 프로젝트를 수행하며, 독창적이고 세련된 결과물을 만들어내는 데 자부심을 느낍니다. <br />
-                    탁월한 디자인 감각과 기술력을 바탕으로, 여러분의 프로젝트에 활력을 불어넣겠습니다. <br />
+                    디자이너로서 다양한 프로젝트를 수행하며, 독창적이고 세련된 결과물을 만들어내는 데 자부심을 느낍니다.
+                    <br />
                     함께 멋진 결과를 만들어나가길 기대합니다.
                 </p>
                 <nav class="menu">
@@ -27,9 +27,208 @@
                 </nav>
             </div>
 
+            <main id="main">
+                <div class="profile">
+                    <div class="ab-Img3">
+                        <img class="abFlower1" src="assets/img/about/abFlower-1.svg" alt="profile" />
+                    </div>
+                    <div class="ab-Img4">
+                        <img class="abFlower2" src="assets/img/about/abFlower-2.svg" alt="profile" />
+                    </div>
+                    <div class="ab-Img5">
+                        <img class="abFlower3" src="assets/img/about/abFlower-3.svg" alt="profile" />
+                    </div>
+                    <div class="ab-Img6">
+                        <img class="abFlower4" src="assets/img/about/abFlower-4.svg" alt="profile" />
+                    </div>
+                    <div class="ab-Img7">
+                        <img class="abFlower5" src="assets/img/about/abFlower-5.svg" alt="profile" />
+                    </div>
+                    <div class="ab-Img8">
+                        <img class="abFlower6" src="assets/img/about/abFlower-6.svg" alt="profile" />
+                    </div>
+                    <div class="ab-Img9">
+                        <img class="abFlower10" src="assets/img/about/abFlower-7.svg" alt="profile" />
+                    </div>
+                    <div class="ab-Img10">
+                        <img class="abFlower11" src="assets/img/about/abFlower-8.svg" alt="profile" />
+                    </div>
+                    <div class="ab-Img11">
+                        <img class="abFlower12" src="assets/img/about/abFlower-9.svg" alt="profile" />
+                    </div>
+                    <div class="ab-Img12">
+                        <img class="abFlower13" src="assets/img/about/abFlower-1.svg" alt="profile" />
+                    </div>
+                    <div class="ab-Img13">
+                        <img class="abFlower14" src="assets/img/about/abFlower-5.svg" alt="profile" />
+                    </div>
+                    <div class="ab-Img14">
+                        <img class="abFlower15" src="assets/img/about/abFlower-3.svg" alt="profile" />
+                    </div>
+                    <div class="ab-Img15">
+                        <img class="abFlower16" src="assets/img/about/abFlower-10.svg" alt="profile" />
+                    </div>
+                    <div class="ab-Img16">
+                        <img class="abFlower17" src="assets/img/about/abFlower-11.svg" alt="profile" />
+                    </div>
+                    <div class="ab-Img17">
+                        <img class="abFlower18" src="assets/img/about/abFlower-12.svg" alt="profile" />
+                    </div>
+                    <div class="ab-Img18">
+                        <img class="abFlower19" src="assets/img/about/abFlower-13.svg" alt="profile" />
+                    </div>
+                    <div class="ab-Img19">
+                        <img class="abFlower20" src="./assets/flower-left/ㅣ_left-flower-16-b.svg" alt="profile" />
+                    </div>
+                    <div class="ab-Img20">
+                        <img class="abFlower21" src="./assets/flower-left/ㅣ_left-flower-5-y.svg" alt="profile" />
+                    </div>
+                    <div class="ab-Img21">
+                        <img class="abFlower22" src="assets/img/about/abFlower-10.svg" alt="profile" />
+                    </div>
+                    <div class="ab-Img22">
+                        <img class="abFlower23" src="assets/img/about/abFlower-10.svg" alt="profile" />
+                    </div>
+                    <div class="ab-Img23">
+                        <img class="abFlower24" src="assets/img/about/abLeaf-1.svg" alt="profile" />
+                    </div>
+                    <div class="ab-Img24">
+                        <img class="abFlower25" src="assets/img/about/abLeaf-1.svg" alt="profile" />
+                    </div>
+                    <div class="ab-Img25">
+                        <img class="abFlower26" src="assets/img/about/abLeaf-1.svg" alt="profile" />
+                    </div>
+                    <div class="ab-Img26">
+                        <img class="abFlower27" src="assets/img/about/abLeaf-2.svg" alt="profile" />
+                    </div>
+                    <div class="ab-Img27">
+                        <img class="abFlower28" src="assets/img/about/abLeaf-3.svg" alt="profile" />
+                    </div>
+                    <div class="ab-Img28">
+                        <img class="abFlower29" src="assets/img/about/abLeaf-5.svg" alt="profile" />
+                    </div>
+                    <div class="ab-Img29">
+                        <img class="abFlower30" src="assets/img/about/abLeaf-5.svg" alt="profile" />
+                    </div>
+                    <div class="ab-Img30">
+                        <img class="abFlower31" src="assets/img/about/abFlower-5.svg" alt="profile" />
+                    </div>
+                    <div class="ab-Img31">
+                        <img class="abFlower32" src="assets/img/about/abLeaf-4.svg" alt="profile" />
+                    </div>
+                    <div class="ab-Img32">
+                        <img class="abFlower33" src="./assets/flower-right/r-_right-flower-7.svg" alt="profile" />
+                    </div>
+                    <div class="ab-Img33">
+                        <img class="abFlower34" src="./assets/flower-right/r-_right-flower-11.svg" alt="profile" />
+                    </div>
+                    <div class="ab-Img34">
+                        <img class="abFlower35" src="assets/img/about/abLeaf-1.svg" alt="profile" />
+                    </div>
+                    <div class="ab-Img35">
+                        <img class="abFlower36" src="assets/img/about/ab-line.svg" alt="profile" />
+                    </div>
+                    <div class="ab-Img1">
+                        <img class="ab-frame" src="assets/img/about/about2.webp" alt="profile" />
+                    </div>
+                    <div class="ab-Img2">
+                        <img class="ab-pofile" src="assets/img/about/about1.webp" alt="profile" />
+                        <div class="wrapper">
+                            <div class="blur"></div>
+                            <div class="blur"></div>
+                            <div class="blur"></div>
+                        </div>
+                    </div>
+                </div>
+            </main>
+
             <div class="bottomWrap">
-                <h3>planning desinger</h3>
+                <h3 class="split">planning desinger</h3>
             </div>
         </div>
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js"></script>
+        <script src="https://unpkg.com/split-type"></script>
+
+        <script>
+            const targets = gsap.utils.toArray(".split");
+            let SplitClient = new SplitType(targets, { type: "lines, words, chars" });
+            let lines = SplitClient.lines;
+            let words = SplitClient.words;
+            let chars = SplitClient.chars;
+        </script>
+
+        <script>
+            gsap.set(".titleWrap h2 .char", { opacity: 0, y: 10 });
+            gsap.set(".titleWrap p .line", { opacity: 0, y: 5 });
+            gsap.set(".menu li", { opacity: 0, y: 5 });
+            gsap.set(".bottomWrap h3 .char", { y: 200 });
+
+            const tl = gsap.timeline();
+
+            setTimeout(() => {
+                tl.to(".titleWrap h2 .char", { opacity: 1, y: 0, stagger: 0.03, duration: 0.5, ease: "power4.out" });
+                tl.to(".titleWrap p .line", { opacity: 1, y: 0, stagger: 0.5, duration: 0.5, ease: "power2.out" });
+                tl.to(".menu li", { opacity: 1, y: 0, stagger: 0.5, duration: 0.5, ease: "power2.out" });
+                tl.to(".bottomWrap h3 .char", { y: 0, stagger: 0.02, duration: 0.5, ease: "power4.out" });
+            }, 3000);
+        </script>
+
+        <script>
+            console.clear();
+            const randomX = random(-400, 400);
+            const randomY = random(-200, 200);
+            const randomDelay = random(0, 50);
+            const randomTime = random(6, 12);
+            const randomTime2 = random(5, 6);
+            const randomAngle = random(-30, 150);
+
+            const blurs = gsap.utils.toArray(".blur");
+            blurs.forEach((blur) => {
+                gsap.set(blur, {
+                    x: randomX(-1),
+                    y: randomX(1),
+                    rotation: randomAngle(-1),
+                });
+
+                moveX(blur, 1);
+                moveY(blur, -1);
+                rotate(blur, 1);
+            });
+
+            function rotate(target, direction) {
+                gsap.to(target, randomTime2(), {
+                    rotation: randomAngle(direction),
+                    // delay: randomDelay(),
+                    ease: Sine.easeInOut,
+                    onComplete: rotate,
+                    onCompleteParams: [target, direction * -1],
+                });
+            }
+
+            function moveX(target, direction) {
+                gsap.to(target, randomTime(), {
+                    x: randomX(direction),
+                    ease: Sine.easeInOut,
+                    onComplete: moveX,
+                    onCompleteParams: [target, direction * -1],
+                });
+            }
+
+            function moveY(target, direction) {
+                gsap.to(target, randomTime(), {
+                    y: randomY(direction),
+                    ease: Sine.easeInOut,
+                    onComplete: moveY,
+                    onCompleteParams: [target, direction * -1],
+                });
+            }
+
+            function random(min, max) {
+                const delta = max - min;
+                return (direction = 1) => (min + delta * Math.random()) * direction;
+            }
+        </script>
     </body>
 </html>
